manifests/2048-game.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 2048-game
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048-game
  namespace: 2048-game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 2048-game
  template:
    metadata:
      labels:
        app: 2048-game
    spec:
      containers:
      - name: 2048-game
        image: 106801461504.dkr.ecr.eu-west-1.amazonaws.com/2048-game:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: game-2048-service
  namespace: 2048-game
spec:
  selector:
    app: 2048-game
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2048-game-ingress
  namespace: 2048-game
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - eks.easyumrahs.com
    secretName: 2048-game-tls
  rules:
  - host: eks.easyumrahs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-2048-service
            port:
              number: 80
